<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="diagnose">一键诊断</string>
    <string name="input_no_empty">输入不能为空</string>
    <string name="please_input_correct_phone">请输入正确的电话号</string>
    <string name="input_error">输入错误，请重新输入</string>
    <string name="app_name">点智互动SSH</string>
    <string name="enterprise">中科在线</string>
    <string name="searching_location">正在定位中……</string>
    <string name="login_exit">用户退出</string>
    <string name="cancel_notification">取消通知</string>
    <string name="no_login_ten">十天内免登陆</string>
    <string name="remember_pwd">记住密码</string>
    <string name="welcome_login">欢迎登陆</string>
    <string name="login">登 陆</string>
    <string name="login_username">账号</string>
    <string name="login_pwd">密码</string>
    <string name="netspeed_test">网络测试</string>
    <string name="router_login">路由登录</string>
    <string name="router_distribution">路由分布</string>
    <string name="router_distribution_detail">路由分布详情</string>
    <string name="push_distribution">partner分布</string>
    <string name="router_offline_detail">掉线路由详情</string>
    <string name="wifinfo">WiFi信息</string>
    <string name="local_offline_louter">路由提示</string>
    <string name="wechat">微信</string>
    <string name="route_map">路由地图</string>
    <string name="phone">电话</string>
    <string name="speedtest">网速检测</string>
    <string name="test_usename">root</string>
    <string name="test_hostname">192.168.1.1</string>
    <string name="test_pwd">WifiAdx0penwrt</string>
    <string name="log_name">请输入客户名（必须）</string>
    <string name="worker_name">请输入维修人员名字（必须）</string>
    <string name="worker_phone">请输入维修人员电话（必须）</string>
    <string name="conn_status">连接</string>
    <string name="close_status">断开</string>
    <string name="spinner_prompt">请选择保存类型</string>
    <string name="save">保存</string>
    <string name="menu_settings">Settings</string>
    <string name="input_information">Input Information</string>
    <string name="username">Username</string>
    <string name="hostname">Hostname</string>
    <string name="password">Password</string>
    <string name="connect_btn">开始测试</string>
    <string name="close_router">关闭路由</string>
    <string name="connect_router">连接路由</string>
    <string name="operation_explain">操作说明</string>
    <string name="test">连接</string>
    <string name="sign_today">今日签到</string>
    <string name="his_trace">历史足迹</string>
    <string name="sign">签到</string>
    <string name="exit">退出</string>
    <string name="choose">选择命令</string>
    <string name="input_prompt">请输入测试命令</string>
    <string name="close_test">关闭测试</string>
    <string name="connect_status">连接状态:</string>
    <string name="status">Status</string>
    <string name="disconnect_btn">Disconnect</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="command">Enter command</string>
    <string name="runcommand">Run</string>
    <string name="taskfail">Unable to complete command.</string>
    <string name="progress_runningcommand">Running command</string>
    <string name="progress_pleasewait">Please wait</string>
    <string name="filetransfer">File transfer</string>
    <string name="up">Up</string>
    <string name="retrieve_remote_files">Retrieving remote file list</string>
    <string name="insertallvalues">Please fill in username, hostname and password values.</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="share">一键分享</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>