<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggshell"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="cn.clickwise.ui.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbar_login_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/eggshell"
        android:title="@string/welcome_login">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_below="@+id/tbar_login_title"
        android:layout_margin="@dimen/te"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/te"
        android:scaleType="fitXY"
        android:src="@mipmap/logo2"/>


    <EditText
        android:id="@+id/et_login_username"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/thy"
        android:layout_marginRight="@dimen/thy"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/eit"
        android:background="@drawable/edit_bg"
        android:hint="@string/login_username"
        android:maxLines="1"
        android:paddingLeft="@dimen/te"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/thy"
        android:layout_marginRight="@dimen/thy"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/fh"
        android:background="@drawable/edit_bg"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/te"
        android:singleLine="true"/>


    <LinearLayout
        android:id="@+id/liner_login_chslayout"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/thy"
        android:layout_marginRight="@dimen/thy"
        android:layout_below="@+id/et_login_pwd"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/te"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbx_login_remberpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/remember_pwd"/>

        <CheckBox
            android:id="@+id/cbx_login_nologin"
            android:shadowColor="@color/login_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_login_ten"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/liner_login_chslayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/thy"
        android:layout_marginRight="@dimen/thy"
        android:background="@drawable/btn_bg"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/te"
        android:textSize="@dimen/ty"
        android:text="@string/login"/>
</RelativeLayout>
