<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_logname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_dialoglog_logname"
            android:imeActionId="@+id/logname"
            style="@style/editTextStyleFoDialog"
            android:hint="@string/log_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_workername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_dialoglog_workername"
            style="@style/editTextStyleFoDialog"
            android:hint="@string/worker_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_workerphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_dialoglog_workerphone"
            style="@style/editTextStyleFoDialog"
            android:hint="@string/worker_phone"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/sp_dialoglog_savetype"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fy"
        android:layout_marginTop="@dimen/te"
        android:entries="@array/fileType"
        android:prompt="@string/spinner_prompt"
        android:visibility="gone">

    </Spinner>

</LinearLayout>